Fixed alignment and floats

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -132,6 +132,7 @@ body {
 
 .sub .title {
 	width: 100%;
+	float: left;
 }
 
 .sub .title h4 {
